package edu.hm.dako.chatclient;

/**
 * starts the chat client
 *
 * @author Peter Mandl, edited by Lerngruppe
 */
public class ClientStarter {
    /**
     * starts the chat client
     *
     * @param args currently ignored
     */
    public static void main(String[] args) {//TODO parametrize
        ClientFxGUI.main(args);
    }

    /**
     * Konstruktor
     */
    public ClientStarter() {
    }
}